Added spring auditing and Completed user email confirmation